# aegis

./: .dockerignore  .gitignore  CODEBASE_EXPLORATION.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: api.md  architecture.md  configuration.md  skills.md  tools.md
src/aegis/: __init__.py  __main__.py  app.py
src/aegis/api/: __init__.py  websocket.py
src/aegis/api/routes/: agent_api.py  agents.py  api_keys.py  auth.py  channels.py  conversations.py  files.py  health.py  knowledge.py  mcp_oauth.py  models.py  oauth.py  scheduled_tasks.py  webhooks.py
src/aegis/auth/: __init__.py  dependencies.py  jwt.py  models.py  oauth.py  passwords.py  service.py
src/aegis/channels/: __init__.py  base.py  discord_channel.py  email_channel.py  manager.py  sms_channel.py  telegram_channel.py  wechat_channel.py
src/aegis/config/: __init__.py  defaults.py  loader.py  settings.py
src/aegis/core/: __init__.py  orchestrator.py  session.py  title_generator.py  tool_loop.py  types.py
src/aegis/knowledge/: service.py
src/aegis/llm/: __init__.py  base.py  context.py  registry.py  types.py
src/aegis/llm/providers/: anthropic.py  litellm_proxy.py  ollama.py  openai.py
src/aegis/memory/: __init__.py  embeddings.py  store.py
src/aegis/services/: cron_scheduler.py  webhook_dispatcher.py
src/aegis/skills/: __init__.py  loader.py  types.py
src/aegis/storage/: __init__.py  database.py
src/aegis/storage/migrations/: 001_initial.sql  003_multi_tenant.sql  004_agents.sql
src/aegis/storage/repositories/: __init__.py  (+10 more)
src/aegis/tools/: __init__.py  agent_delegate.py  base.py  bash.py  document_export.py  file_ops.py  image_gen.py  knowledge.py  mcp_client.py  mcp_tool.py  python_interpreter.py  registry.py  schedule.py  types.py  video.py  web_fetch.py  web_search.py
src/aegis/utils/: __init__.py  errors.py  ids.py  logging.py  retry.py  text_extract.py  tokens.py
tests/: conftest.py
tests/integration/: test_api.py  test_repositories.py  test_webhooks_cron.py
tests/unit/: test_jwt.py  test_passwords.py  test_types.py
web/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/api/: agents.ts  auth.ts  channels.ts  client.ts  conversations.ts  files.ts  knowledge.ts  mcp.ts  models.ts  schedules.ts  webhooks.ts
web/src/components/: artifacts-panel.tsx  command-palette.tsx  user-menu.tsx
web/src/lib/: theme.ts
web/src/pages/: agent-chat.tsx  agent-settings.tsx  channels.tsx  chat.tsx  dashboard.tsx  knowledge.tsx  login.tsx  oauth-complete.tsx  register.tsx  schedules.tsx  webhooks.tsx
web/src/stores/: auth-store.ts
web/src/types/: index.ts
(+28 files in other folders)
